<resources>
    <string name="app_name">System Inventory deluXe</string>

    <!--MainActivity XML (activity_main_view)-->
    <string name="main_menu_title">Welcome to SIX</string>
    <string name="full_inventory">Full Inventory</string>
    <string name="priority_inventory">Priority Items</string>
    <string name="low_inventory">Low Stock Items</string>
    <string name="recipe_button">Recipes List</string>
    <string name="Help_button">Help Menu</string>

    <!--EditInventoryActivity XML (activity_edit_inventory_view)-->
    <string name="inventory_name">Insert name of product here!</string>
    <string name="quant_of_item">Quantity</string>
    <string name="dynamic_message">Add Item</string>
    <string name="item_description">Type a brief description here!</string>
    <string name="threshold_string">Minimum quantity</string>

    <!--EDIT Inventory Class-->

    <string name="empty_field_toast">Please insert all information!</string>
    <string name="fail_message">Try again</string>
    <string name="save_successful">Save Successful</string>
    <string name="remove_success">Delete Successful</string>
    <string name="remove_product">Are you sure you want to delete this product?</string>
    <string name="backpress">"Are you sure you want to exit? \n Your data may be lost."</string>
    <string name="deniedPer">"Permissions denied, you cannot add an image."</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="gallery">Pick photo from gallery</string>
    <string name="camera">Take a photo with camera</string>
    <string name="picmess">From where would you like to select an image?</string>


    <!--Recipe view-->
    <string name="ingridients_required">Ingredients Required: </string>
    <string name="input_ingrediants_here">Input ingredients here!</string>
    <string name="recipe_steps">Recipe Steps:</string>
    <string name="input_recipe_steps_here">Input recipe steps here!</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="recipe_ingredients">Recipe Ingredients:</string>
    <string name="remove_recipe">Are you sure you want to delete this recipe?</string>
    <string name="empty_product">This item has not been saved</string>
    <string name="neg_string">Quantity cannot be negative!</string>
    <string name="recipe_name">Recipe name:</string>
    <string name="name_of_recipe">Name of Recipe!</string>

    <!--Help view-->
    <string name="helpmenu">Help Menu</string>
    <string name="helpinstruct">\t Click on the item you want to learn more about!\n</string>

    <string name="addItem">Adding an Item: \n\t To add an item, go to the "Full Inventory"\n
        page by clicking on the button in the main page.\n Next, click on "+"
        button on the bottom right side of the page to add an item.\n Alternatively,
        click on the three dots on the top right side of the menu bar, then click
        the \'add item\' button.</string>
    <string name="lowItem">Low Stock Items: \n\t When inputting information
        for the item you will be asked for a \'low item threshold\', this determines
        when an item will be marked as a low stock item.\n If the inputted, or updated,
        quantity of the item is every below or equal to the threshold, the item will
        be automatically marked as "low stock".\n Once the item quantity is above the threshold,
        the item will be automatically unmarked as "low stock".\n
        "Low stock" items can be viewed by clicking the "low stock" button in the main menu.</string>
    <string name="priorityItem">Priority Items: \n \t When adding an item to
        your inventory, at the bottom of the page there is a checkbox for making an
        item as a priority item.\n If this box is checked then the item will be marked as
        priority and can be viewed separately in the "priority items" page
        of the app.</string>
    <string name="imageItem">Adding an Image:\n\t
        To add an image to an item, click on the grey box towards the bottom of them add/edit
        item page. Make sure to allow camera permissions, otherwise you will not be able to
        add an image. The image will automatically be adapted to the item icon.</string>
    <string name="searchItem">Searching Items and Recipes: \n\t
        At the top of the respective recipe and inventory pages, there is a search icon.
        The menu bar will expand and then you can type in the item you are looking for and then
        hit enter. Your searches will appear! Make sure to close the search bar by clicking
        the \'x\' mark</string>
    <string name="recipeItem">Adding an Recipe: \n\t To add an item, go to the "Recipes List"\n
        page by clicking on the button in the main page.\n Next, click on "+"
        button on the bottom right side of the page to add an item.\n Alternatively,
        click on the three dots on the top right side of the menu bar, then click
        the \'add item\' button.</string>

</resources>