<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/edit_recipe_scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20sp"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/greetingMessage"
            android:layout_width="225dp"
            android:layout_height="67dp"
            android:layout_marginStart="73dp"
            android:layout_marginEnd="73dp"
            android:gravity="center"
            android:text="@string/add_recipe"
            android:textColor="#2196F3"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/recipeName"
            android:layout_width="209dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="146dp"
            android:layout_marginBottom="22dp"
            android:gravity="center"
            android:text="@string/recipe_name"
            android:textColor="#5627AA"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/name_of_recipe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/greetingMessage" />

        <EditText
            android:id="@+id/name_of_recipe"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="29dp"
            android:gravity="center"
            android:hint="@string/name_of_recipe"
            android:inputType="textCapSentences|textMultiLine"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@+id/ingridients"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipeName"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/ingridients"
            android:layout_width="209dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="146dp"
            android:layout_marginBottom="28dp"
            android:gravity="center"
            android:text="@string/recipe_ingredients"
            android:textColor="#5627AA"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/ingridients_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/ingridients_list"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:hint="@string/input_ingrediants_here"
            android:inputType="textCapSentences|textMultiLine"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingridients" />

        <TextView
            android:id="@+id/steps"
            android:layout_width="209dp"
            android:layout_height="32dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="146dp"
            android:gravity="center"
            android:text="@string/recipe_steps"
            android:textColor="#5627AA"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingridients_list" />

        <EditText
            android:id="@+id/stepsList"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="26dp"
            android:gravity="center"
            android:hint="@string/input_recipe_steps_here"
            android:inputType="textCapSentences|textMultiLine"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/steps" />


        <Button
            android:id="@+id/save_button_recp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="96dp"
            android:foregroundGravity="center"
            android:gravity="center"
            android:padding="8dp"
            android:text="Save"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/delete_button_recp"
            app:layout_constraintTop_toBottomOf="@+id/stepsList" />

        <Button
            android:id="@+id/delete_button_recp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="62dp"
            android:layout_marginTop="96dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="Delete"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stepsList" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>