<?xml version="1.0" encoding="utf-8"?>

<!--This is where a user can input and edit inventory fields such as
item name, weight, etc-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Allows everything to extend past the bounds of the screen
    as in makes this view scrollable-->
    <ScrollView
        android:id="@+id/edit_location_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--The dynamic message test box-->
            <TextView
                android:id="@+id/messageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/dynamic_message"
                android:textSize="34sp" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/name_of_item"
                    android:layout_width="157dp"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="Product Name: "
                    android:textSize="14sp"
                    tools:layout_conversion_absoluteHeight="40dp"
                    tools:layout_conversion_absoluteWidth="76dp"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="83dp" />


            </LinearLayout>

            <!--Name stuff-->
            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--The name of the item input box-->
                <EditText
                    android:id="@+id/name_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/inventory_name"
                    android:inputType="text"
                    android:padding="8dp"
                    tools:layout_conversion_absoluteHeight="25dp"
                    tools:layout_conversion_absoluteWidth="333dp"
                    tools:layout_editor_absoluteX="77dp"
                    tools:layout_editor_absoluteY="142dp" />

            </LinearLayout>

            <!--QUANT STUFF-->
            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/quantity_of_item"
                    android:layout_width="157dp"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="Quantity of Item:  "
                    android:textSize="14sp"
                    tools:layout_conversion_absoluteHeight="40dp"
                    tools:layout_conversion_absoluteWidth="76dp"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="83dp" />


            </LinearLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="221dp"
                app:layout_constraintEnd_toEndOf="@+id/decrement_button"
                app:layout_constraintStart_toEndOf="@+id/decrement_button">

                <!--The following two buttons are decrementing and incrementing-->
                <Button
                    android:id="@+id/decrement_button"
                    android:layout_width="89dp"
                    android:layout_height="59dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="13dp"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="-"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toTopOf="@+id/quantity_item"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_conversion_absoluteHeight="48dp"
                    tools:layout_conversion_absoluteWidth="205dp" />

                <Button
                    android:id="@+id/increment_button"
                    android:layout_width="84dp"
                    android:layout_height="62dp"
                    android:layout_marginStart="220dp"
                    android:layout_marginTop="92dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="10dp"
                    android:padding="8dp"
                    android:text="+"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toTopOf="@+id/quantity_item"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/decrement_button"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_conversion_absoluteHeight="48dp"
                    tools:layout_conversion_absoluteWidth="205dp" />

                <!--The place to insert the item quant-->
                <EditText
                    android:id="@+id/quantity_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:hint="@string/quant_of_item"
                    android:inputType="numberDecimal"
                    android:padding="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/increment_button"
                    tools:layout_conversion_absoluteHeight="25dp"
                    tools:layout_conversion_absoluteWidth="333dp"
                    tools:layout_editor_absoluteX="0dp" />

                <!--Should display the quantity-->
                <TextView
                    android:id="@+id/quantity_display"
                    android:layout_width="184dp"
                    android:layout_height="76dp"
                    android:layout_marginStart="112dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="113dp"
                    android:layout_marginBottom="72dp"
                    android:gravity="center"
                    android:text="qt."
                    android:textSize="34sp"
                    app:layout_constraintBottom_toTopOf="@+id/quantity_item"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!--Threshold stuff-->
            <LinearLayout
                android:id="@+id/linearLayout5.5"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_threshold"
                    android:layout_width="157dp"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="Threshold for Low Item: "
                    android:textSize="14sp"
                    tools:layout_conversion_absoluteHeight="40dp"
                    tools:layout_conversion_absoluteWidth="76dp"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="83dp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6.5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--Input place for threshold-->
                <EditText
                    android:id="@+id/threshold_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/threshold_string"
                    android:inputType="numberDecimal"
                    android:padding="8dp"
                    tools:layout_conversion_absoluteHeight="25dp"
                    tools:layout_conversion_absoluteWidth="333dp"
                    tools:layout_editor_absoluteX="77dp"
                    tools:layout_editor_absoluteY="142dp" />

            </LinearLayout>

            <!--Description-->
            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:orientation="horizontal">

                <!---->
                <TextView
                    android:id="@+id/decription_of_item"
                    android:layout_width="157dp"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="Decription of Product: "
                    android:textSize="14sp"
                    tools:layout_conversion_absoluteHeight="40dp"
                    tools:layout_conversion_absoluteWidth="76dp"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="83dp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--Input place for the desctiption of the item-->
                <EditText
                    android:id="@+id/decription_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/inventory_name"
                    android:inputType="text"
                    android:padding="8dp"
                    tools:layout_conversion_absoluteHeight="25dp"
                    tools:layout_conversion_absoluteWidth="333dp"
                    tools:layout_editor_absoluteX="77dp"
                    tools:layout_editor_absoluteY="142dp" />

            </LinearLayout>

            <!--RECIPE Stuff-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="165dp"
                app:layout_constraintEnd_toEndOf="@+id/decrement_button"
                app:layout_constraintStart_toEndOf="@+id/decrement_button">


                <Button
                    android:id="@+id/add_recipe_button"
                    android:layout_width="104dp"
                    android:layout_height="46dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="30dp"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="Add"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/added_recipe"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_conversion_absoluteHeight="48dp"
                    tools:layout_conversion_absoluteWidth="205dp" />

                <TextView
                    android:id="@+id/add_recipe"
                    android:layout_width="221dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    android:gravity="center"
                    android:text="Add Recipe: "
                    app:layout_constraintBottom_toTopOf="@+id/added_recipe"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/added_recipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="33dp"
                    android:gravity="center"
                    android:hint="Click 'Add' to add a recipe!"
                    android:inputType="text"
                    android:padding="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_conversion_absoluteHeight="25dp"
                    tools:layout_conversion_absoluteWidth="333dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!--Image stuff-->
            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/image_of_item"
                    android:layout_width="157dp"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="Image of Item:  "
                    android:textSize="14sp"
                    tools:layout_conversion_absoluteHeight="40dp"
                    tools:layout_conversion_absoluteWidth="76dp"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="83dp" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout8"
                android:orientation="horizontal">

                <!--Place to input image-->

                <ImageButton
                    android:id="@+id/product_image"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="70dp"
                    android:layout_marginRight="70dp"
                    android:background="#eee"
                    android:scaleType="center" />
            </LinearLayout>

            <!--Save and delete buttons-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout9"
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="104dp"
                    android:layout_height="46dp"
                    android:layout_marginEnd="63dp"
                    android:layout_marginBottom="51dp"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="Save"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <Button
                    android:id="@+id/delete_button"
                    android:layout_width="104dp"
                    android:layout_height="46dp"
                    android:layout_marginStart="74dp"
                    android:layout_marginBottom="51dp"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="Delete"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:id="@+id/linearLayout10"
                android:orientation="horizontal">


            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>